<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="8dp"
        android:visibility="gone">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/innerConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textStyle="bold"
                android:textColor="@color/primary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/innerLinearLayout"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:background="@color/primary"
                android:padding="2dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/title"
                    app:srcCompat="@mipmap/ic_launcher" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/date"
                android:textColor="@color/primary"
                app:layout_constraintStart_toEndOf="@id/innerLinearLayout"
                app:layout_constraintTop_toBottomOf="@id/title" />

            <TextView
                android:id="@+id/textView_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/time"
                android:textColor="@color/primary"
                app:layout_constraintStart_toEndOf="@id/innerLinearLayout"
                app:layout_constraintTop_toBottomOf="@id/textView_date" />

            <LinearLayout
                android:id="@+id/hori_lb"
                android:layout_width="290dp"
                android:layout_height="1dp"
                android:orientation="horizontal"
                android:background="@color/grey"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@id/textView_time"
                app:layout_constraintStart_toEndOf="@id/innerLinearLayout"/>

            <TextView
                android:id="@+id/textView_tickets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tickets"
                android:textStyle="bold"
                android:textColor="@color/primary"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/hori_lb"
                app:layout_constraintStart_toEndOf="@id/innerLinearLayout"
                app:layout_constraintEnd_toEndOf="parent"/>
            <LinearLayout
                android:id="@+id/vert_lb"
                android:layout_width="1dp"
                android:layout_height="100dp"
                android:background="@color/grey"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/textView_tickets"
                app:layout_constraintStart_toEndOf="@id/innerLinearLayout"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/textView_adult_tickets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adult"
                android:textColor="@color/blue"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/textView_tickets"
                app:layout_constraintStart_toEndOf="@id/innerLinearLayout"
                app:layout_constraintEnd_toEndOf="@id/vert_lb"/>

            <TextView
                android:id="@+id/textView_child_tickets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kid"
                android:textColor="@color/yellow"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/textView_tickets"
                app:layout_constraintStart_toEndOf="@id/vert_lb"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/textView_adult_tickets_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textSize="25sp"
                android:textColor="@color/blue"
                android:textStyle="bold"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@id/textView_adult_tickets"
                app:layout_constraintStart_toEndOf="@id/innerLinearLayout"
                app:layout_constraintEnd_toEndOf="@id/vert_lb"/>

            <TextView
                android:id="@+id/textView_child_tickets_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textSize="25sp"
                android:textColor="@color/yellow"
                android:textStyle="bold"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@id/textView_child_tickets"
                app:layout_constraintStart_toEndOf="@id/vert_lb"
                app:layout_constraintEnd_toEndOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>